<resources>
	<string name="app_name">Pen Notepad</string>
	
	<string name="home_folder_name">Pen Notepad</string> 
	
	<string name="title_root_dir">Pen Notepad</string> 
	
	<string name="title_pictures">Pictures</string> 
	<string name="title_format">[folder]</string> 
	<string name="title_goto_page">Go to page:</string> 
	<string name="title_brush_width">Brush Width</string> 
	
	<string name="title_new_folder">New Folder Name</string> 
	<string name="title_ren_folder">Rename Folder</string> 
	<string name="title_ren_file">Rename File</string> 
	<string name="title_send_zip_to">Send notes to</string> 
	<string name="title_out_of_mem">Out of Memory</string> 
	<string name="title_delete">Confirm Delete</string> 
	<string name="title_already_progress">Already in progress</string> 
	
	<string name="title_open_link">External Link</string>
	<string name="title_send_email">Send Email</string>
	
	<string name="title_1_item">1 item</string> 
	<string name="title_n_items">[n] items</string> 
	
	<string name="menu_create_folder">New Folder</string> 
	<string name="menu_create_page">New Page</string> 
	<string name="menu_goto_page">Go to page</string> 
	<string name="menu_toggle_overview">Toggle Overview</string> 
	<string name="menu_recents">Switch to Recent</string> 
	<string name="menu_annotate">Annotate</string> 
	<string name="menu_export_pages">Export Pages</string> 
	<string name="menu_log_time">Log Usage Time</string> 
	<string name="menu_view_logs">View Time Log</string> 
	<string name="menu_show_pg_nav">Show Page Up/Down</string> 
	<string name="menu_pen_mode">Pen Mode</string> 
	<string name="menu_settings">Settings</string> 
	
	<string name="menu_copy">Copy</string> 
	<string name="menu_cut">Cut</string> 
	<string name="menu_delete">Delete</string> 
	<string name="menu_paste">Paste</string> 
	<string name="menu_rename">Rename</string> 
	
	<string name="label_ok">OK</string> 
	<string name="label_cancel">Cancel</string> 
	<string name="label_delete">Delete</string> 
	<string name="label_new_folder">Untitled</string> 
	<string name="label_brush_width">[width] mm</string> 
	<string name="label_pg_of">%d of %d</string> 
	<string name="label_select">select</string> 
	
	<string name="label_page_up">Page Up</string> 
	<string name="label_page_down">Page Down</string> 
	<string name="label_move_up">MOVE\nUP</string>
	<string name="label_move_down">MOVE\nDOWN</string>
	
	<string name="msg_load_error">Error loading picture</string> 
	<string name="msg_create_home_folder_error">Error creating Notes folder</string> 
	<string name="msg_goto_page">You are at page [current] of [total]. </string> 
	<string name="msg_brush_width">Enter a brush width in millimeters (mm): </string> 
	<string name="msg_could_not_new_folder">Could not create folder. Try again? </string> 
	<string name="msg_could_not_ren_folder">Could not rename folder. Try again? </string> 
	<string name="msg_could_not_ren_file">Could not rename file. Try again? </string> 
	<string name="msg_could_not_export_io">Could not export ZIP: I/O error</string> 
	<string name="msg_making_paper">Adding page &#8230;</string> 
	<string name="msg_out_of_mem">The system ran out of memory, so pictures may load very blurry or 
	even not load at all. Try re-opening the app to see if that helps. Sorry for the inconvenience!</string> 
	<string name="msg_cache_updated">Cache updated, {N} item(s)</string> 
	<string name="msg_files_deleted">[number] of [total] deleted</string> 
	<string name="msg_files_pasted">[number] of [total] pasted</string> 
	<string name="msg_confirm_delete_owned_folders">Are you sure you want to permanently delete [owned] folders and their contents?</string> 
	<string name="msg_confirm_delete_owned_folders_s">Are you sure you want to permanently delete [owned] folder and its contents?</string> 
	<string name="msg_confirm_delete_mixed_folders">Are you sure you want to permanently delete [owned] folder(s) and their contents 
	(created with this app), and hide [other] folder(s) (not created with this app)?</string> 
	<string name="msg_confirm_delete_other_folders">Are you sure you want to hide [other] folders (can only <i>hide</i> them because they were not created with this app)?</string>
	<string name="msg_confirm_delete_other_folders_s">Are you sure you want to hide [other] folder (can only <i>hide</i> it because it was not created with this app)?</string>
	<string name="msg_confirm_delete_files">Are you sure you want to permanently delete [number] files?</string> 
	<string name="msg_confirm_delete_files_s">Are you sure you want to permanently delete [number] file?</string> 
	<string name="msg_previous_delete_progress">Cannot delete yet. A previous delete operation is still in progress. Please try again in a moment.</string>
	
	<string name="msg_open_link">Open external link?: [br][url]</string>
	
	<string name="label_text_brush_width">(Brush Width)</string> 
	
	<string name="access_eraser">Eraser</string> 
	<string name="access_whiteout">Whiteout</string> 
	<string name="access_pen">Pen Color [number]</string> 
	
	
	<string name="error_io_no_edit">I/O error; cannot load/save writing</string> 
	
	
	
</resources>
