<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	
	<!--<item-->
		<!--android:id="@+id/menu_action_annotate"-->
		<!--android:icon="@drawable/ic_edit_black_24dp"-->
		<!--android:showAsAction="ifRoom"-->
		<!--android:title="@string/menu_annotate"-->
		<!--/>-->
	
	<item
		android:id="@+id/menu_action_new_page"
		android:icon="@drawable/ic_add_black_24dp"
		android:showAsAction="ifRoom"
		android:title="@string/menu_create_page"
		/>
	
	<item
		android:id="@+id/menu_action_new_folder"
		android:icon="@drawable/ic_create_new_folder_black_24dp"
		android:showAsAction="ifRoom"
		android:title="@string/menu_create_folder"
		/> 
	
	<item
		android:id="@+id/menu_action_goto_page"
		android:icon="@drawable/ic_page_number_v1"
		android:showAsAction="ifRoom"
		android:title="@string/menu_goto_page"
		/>
	
	<item
		android:id="@+id/menu_action_recents"
		android:icon="@drawable/ic_access_time_black_24dp"
		android:showAsAction="ifRoom"
		android:title="@string/menu_recents"
		/> 
	
	<item 
		android:id="@+id/menu_action_export_pages"
		android:showAsAction="never"
		android:title="@string/menu_export_pages"
		/> 
	
	
	<item
		android:id="@+id/menu_action_pen_mode"
		android:showAsAction="never"
		android:title="@string/menu_pen_mode"
		android:checkable="true"
		android:checked="false"
		/> 
	
	
	<item
		android:id="@+id/menu_action_settings"
		android:showAsAction="never"
		android:title="@string/menu_settings"
		/> 
	
</menu>